--- a/app/views/components/publications.pug
+++ b/app/views/components/publications.pug
@@ -1,4 +1,4 @@
-if resume.publications.length
+if resume.publications && resume.publications.length
   .container.publications-container
     +title("Publications")
     each pub in resume.publications
