--- a/app/styles/layouts/_page.scss
+++ b/app/styles/layouts/_page.scss
@@ -1,26 +1,18 @@
 .page {
+  transform: scale(1.6);
+  transform-origin: 0 0;
+
   background: white;
   width: $page-width * 1.3;
   min-height: $page-height * 1.3;
   display: block;
-  margin: 0 auto;
+  margin: 0 20%;
   border-top: 10px solid $primary-color;
   // top, right, bottom, left.
   padding: 20px 12px 12px 12px;
-  //-webkit-print-color-adjust: exact;
   @include shadow();
   @include clearfix();
 }
-
-//@page {
-//    size:A4 landscape;
-//    margin-left: 0px;
-//    margin-right: 0px;
-//    margin-top: 0px;
-//    margin-bottom: 0px;
-//    margin: 0;
-//    -webkit-print-color-adjust: exact;
-//}
 
 
 .left-column {
