--- a/app/views/resume.pug
+++ b/app/views/resume.pug
@@ -4,7 +4,7 @@ html
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, user-scalable=no, minimal-ui")
     // TODO: extract these OG/Twitter tags to a partial
-    - let shortTitle = `${resume.basics.name.split(' ')[0] + '\s ' + 'Resume'}`
+    - let shortTitle = `${resume.basics.name.split(' ')[0] + '\'s ' + 'Resume'}`
     meta(property='og:title' content=shortTitle)
     meta(property='og:description' content=`${resume.basics.tagline}`)
     meta(property='og:image' content=`${resume.basics.og_image}`)
@@ -15,10 +15,9 @@ html
     meta(name='twitter:image' content=`${resume.basics.og_image}`)
     title #{shortTitle}
     link(rel="icon" type="image/jpg" href="/images/favicon.jpg")
-    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css")
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css")
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/w3-css/4.1.0/w3.min.css")
     link(rel="stylesheet", href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css")
-    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css")
     link(rel="stylesheet", href="styles/main.css")
     script(src="resume.js" type="module")
     // Google tag (gtag.js)
@@ -41,7 +40,7 @@ html
       div.resume-content
         aside.left-column
           include components/about
-          include components/skills-bars
+          include components/skills
           include components/languages
           include components/interests
         aside.right-column
