--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -238,16 +238,9 @@ ul.two-column li {
   clear: both;
 }
 
-.left-column {
-  float: left;
-  width: 180px;
-  margin-right: 20px;
-  word-wrap: break-word;
-}
-
-.right-column {
-  width: auto;
-  overflow: hidden;
+.resume-content {
+  display: grid;
+  grid-template-columns: 200px 1fr;
 }
 
 .item {
@@ -262,13 +255,11 @@ ul.two-column li {
     margin: 0;
   }
   .page {
+    transform: none !important;
     width: 100%;
     height: 100%;
     margin: 0 8px 0 8px;
     box-shadow: none;
-  }
-  .summary {
-    width: 54%;
   }
   .item {
     page-break-inside: avoid;
