fiddle with styles, add PDF link

--- a/app/styles/layouts/_print.scss
+++ b/app/styles/layouts/_print.scss
@@ -16,7 +16,7 @@
     page-break-inside: avoid;
   }
 
-  .fa-arrow-up-right-from-square {
+  .hide-on-print {
     display: none !important;
   }
 
