--- a/app/styles/layouts/_page.scss
+++ b/app/styles/layouts/_page.scss
@@ -1,6 +1,6 @@
 .page {
-  transform: scale(1.6);
-  transform-origin: 0 0;
+  // transform: scale(1.6);
+  // transform-origin: 0 0;
 
   background: white;
   width: $page-width * 1.3;
@@ -25,4 +25,10 @@
   &:last-child {
     margin-bottom: 0;
   }
+}
+
+a {
+  text-decoration-line: underline;
+  text-decoration-style: line;
+  text-decoration-thickness: 0.5px;
 }
