--- a/app/views/resume.pug
+++ b/app/views/resume.pug
@@ -7,8 +7,13 @@ html
     meta(property='og:title' content=shortTitle)
     meta(property='og:description' content=`${resume.basics.tagline}`)
     meta(property='og:image' content=`${resume.basics.og_image}`)
+    meta(author="Dmitriy Safonov")
     title #{shortTitle}
-    link(rel="icon" type="image/jpg" href="/images/favicon.jpg")
+    link(rel="manifest" href="/site.webmanifest")
+    link(rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png")
+    link(rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png")
+    link(rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png")
+    link(rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png")
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css")
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/w3-css/4.1.0/w3.min.css")
     link(rel="stylesheet", href="styles/main.css")
