--- a/app/views/resume.pug
+++ b/app/views/resume.pug
@@ -4,11 +4,12 @@ html
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, user-scalable=no, minimal-ui")
     - let shortTitle = `${resume.basics.name.split(' ')[0] + '\'s ' + 'Resume'}`
+    title #{shortTitle}
     meta(property='og:title' content=shortTitle)
     meta(property='og:description' content=`${resume.basics.tagline}`)
     meta(property='og:image' content=`${resume.basics.og_image}`)
-    meta(author="Dmitriy Safonov")
-    title #{shortTitle}
+    meta(property="article:published_time" content=`${new Date()}`)
+    meta(name="author" content="Dmitriy Safonov")
     link(rel="manifest" href="/site.webmanifest")
     link(rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png")
     link(rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png")
