--- a/app/styles/base/_base.scss
+++ b/app/styles/base/_base.scss
@@ -6,6 +6,38 @@ body {
   color: $secondary-color;
 }
 
+.summary {
+  font-size: 90%;
+}
+
+ul.summary {
+  font-size: 110%;
+}
+
+.section-header {
+  .section_icon {
+    margin-right: 10px;
+    margin-left: 5px;
+
+    img {
+      width: 20px;
+      height: 20px;
+    }
+  }
+}
+
+.work-container, .education-container {
+  ul {
+    margin: 5px 0 0 5px
+  }
+  li {
+    margin-bottom: -5px;
+  }
+  .summary {
+    margin-left: 15px;
+  }
+}
+
 h1,
 h2,
 h3,
@@ -17,20 +49,20 @@ h6 {
 
 h1 {
   @include josefin(700);
-  @include font-size(6);
+  font-size: 250%;
   letter-spacing: 1px;
 }
 
 h2 {
   @include josefin(300);
-  @include font-size(5);
+  font-size: 200%;
   letter-spacing: .5px;
   font-weight: 300;
 }
 
 h3 {
   @include lato(300);
-  @include font-size(4);
+  font-size: 120%;
   letter-spacing: .4px;
 
   &.bold {
@@ -40,16 +72,20 @@ h3 {
 
 h4 {
   @include lato(300);
-  @include font-size(3);
+  font-size: 100%;
 
   &.bold {
-    font-weight: 500;
+    font-weight: 600;
+  }
+
+  &.minimal {
+    font-size: 90%;
   }
 }
 
 h5 {
   @include lato(300);
-  @include font-size(2.75);
+  font-size: 80%;
 
   &.italic {
     font-style: italic;
@@ -58,7 +94,7 @@ h5 {
 
 h6 {
   @include lato();
-  @include font-size(2.5);
+  font-size: 60%;
 
   &.italic {
     font-style: italic;
@@ -76,11 +112,11 @@ a {
 
 p,
 li {
-  @include font-size(2.75);
+  font-size: 75%;
 }
 
 blockquote {
-  @include font-size(2.75);
+  font-size: 75%;
   @include lato($isItalic: true);
 
   margin: spacing(2) spacing(5);
