--- a/app/styles/components/_info-tag.scss
+++ b/app/styles/components/_info-tag.scss
@@ -1,30 +1,13 @@
 .info-tag-container {
   .fa {
-    @include font-size(3.5);
     width: 12px;
     margin-right: spacing(1);
     text-align: center;
     vertical-align: middle;
-
-    &.fa-map-marker {
-      @include font-size(4);
-    }
-
-    &.fa-mobile {
-      @include font-size(4.5);
-    }
-
-    &.fa-envelope-o {
-      @include font-size(3);
-    }
-
-    &.fa-desktop {
-      @include font-size(2.75);
-    }
   }
 
   .info-text {
-    @include font-size(2.50);
+    font-size: 80%;
     display: inline-block;
     vertical-align: middle;
     width: $aside-width - $aside-margin - 1;
