--- a/app/styles/layouts/_page.scss
+++ b/app/styles/layouts/_page.scss
@@ -1,10 +1,6 @@
 .page {
-  // transform: scale(1.6);
-  // transform-origin: 0 0;
-
   background: white;
-  width: $page-width * 1.3;
-  min-height: $page-height * 1.3;
+  width: 50%;
   display: block;
   margin: 0 20%;
   border-top: 10px solid $primary-color;
@@ -12,6 +8,7 @@
   padding: 20px 12px 12px 12px;
   @include shadow();
   @include clearfix();
+  font-size: 125%;
 }
 
 .resume-content {
