--- a/app/views/components/references.pug
+++ b/app/views/components/references.pug
@@ -9,4 +9,4 @@
         if ref.name
           h5.pull-right — #{ref.name}
   else
-    p Available upon request
+    p.summary Available upon request
