--- a/app/views/resume.pug
+++ b/app/views/resume.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     meta(charset="utf-8")
-    meta(name="viewport", content="width=device-width, user-scalable=no, minimal-ui")
+    meta(name="viewport", content="width=device-width")
     - let shortTitle = `${resume.basics.name.split(' ')[0] + '\'s ' + 'Resume'}`
     title #{shortTitle}
     meta(property='og:title' content=shortTitle)
