--- a/app/styles/base/_base.scss
+++ b/app/styles/base/_base.scss
@@ -51,6 +51,10 @@ h1 {
   @include josefin(700);
   font-size: 250%;
   letter-spacing: 1px;
+  
+  @include mobile {
+    font-size: 200%;
+  }
 }
 
 h2 {
@@ -58,6 +62,10 @@ h2 {
   font-size: 200%;
   letter-spacing: .5px;
   font-weight: 300;
+  
+  @include mobile {
+    font-size: 180%;
+  }
 }
 
 h3 {
@@ -103,7 +111,9 @@ h6 {
 
 a {
   color: inherit;
-  text-decoration: inherit;
+  text-decoration-line: underline;
+  text-decoration-style: line;
+  text-decoration-thickness: 0.5px;
 
   &:hover {
     color: $link-color;
