--- a/app/styles/base/_global.scss
+++ b/app/styles/base/_global.scss
@@ -14,6 +14,10 @@
   width: 75%;
   margin: 2px 0 5px;
   border-top: 1px solid $primary-color;
+
+  @include mobile {
+    border-top: 2px solid $primary-color;
+  }
 }
 
 .pull-left {
